[package]
name = "relatable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
scraper = "*"
async-std = { version = "*", features = ["attributes", "tokio1"] }
serde = { version = "*", features = ["derive"] }
ron = "*"
url = "*"
lazy_static = "*"

[features]
default = []
constraint_debug = []
